Fri Sep 28 11:27:57 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am po/LINGUAS po/POTFILES.in po/da.po po/en_US.po
	po/gnubg.pot po/is.po po/ru.po po/tr.po: make sure that "make dist"
	works. Remove unmaintained languages.

Fri Sep 28 00:28:34 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, bearoff.c, bearoff.h, ChangeLog, export.c, export.h,
	file.c, file.h, formatgs.c, gnubg.c, gtkfile.c, gtkgame.c, html.c,
	lib/.cvsignore, lib/Makefile.am, Makefile.am, matchid.h, rollout.c,
	text.c: add a simple cairo board capable of exporting positions to
	svg, pdf and postscript surfaces
	* simpleboard.c, simpleboard.h: new files
	* lib/dynarray.c, lib/dynarray.h, lib/event.c, lib/event.h,
	lib/event.texi, lib/hash.c, lib/hash.h, lib/heap.c, lib/heap.h,
	lib/stamp-vti, postscript.c: removed files

Thu Sep 27 22:50:16 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* analysis.c, analysis.h, formatgs.c, gnubg.c, gnubgmodule.c,
	gtkexport.c, gtkgame.c, play.c, relational.c, set.c, show.c: remove
	SKILL_GOOD completely as the use was overlapping with that of
	SKILL_NONE

Thu Sep 27 16:22:08 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkfile.c: allow default extension to be .sgf when saving and last
	used extension otherwise.

Thu Sep 27 16:20:17 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* AUTHORS, INSTALL, Makefile.am, README, configure.in, credits.sh,
	non-src/credits.c, non-src/external_l.c, non-src/external_y.c,
	non-src/external_y.h, non-src/sgfl.c, non-src/sgfp.c, non-src/sgfp.h:
	cleanup of readme and install files and minor updates to the rest

Mon Sep 24 22:56:56 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* makebearoff.c: fix tmp file creation problem

Wed Sep 19 22:15:09 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* rollout.c: change assertion to error message when mt_rollout results
	in too many rollouts done.

Sat Sep 15 14:30:36 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* Makefile.am: fix external_l.c dependency problem
