@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: eval.c,v 1.320 2007/07/11 13:39:51 c_anthon Exp $
+ * $Id: eval.c,v 1.321 2007/09/02 20:27:00 c_anthon Exp $
  */
 
 #include "config.h"
@@ -615,16 +615,6 @@ DestroyWeights( void )
   NeuralNetDestroy( &nnpCrashed );
   NeuralNetDestroy( &nnpRace );
 }
-
-extern int
-EvalNewWeights(int nSize)
-{
-  DestroyWeights();
-  CreateWeights( nSize );
-    
-  return 0;
-}
-
 
 extern int
 EvalShutdown ( void ) {
@@ -3209,47 +3199,6 @@ GameStatus( int anBoard[ 2 ][ 25 ], const bgvariation bgv ) {
 
   return 1;
 
-}
-
-extern int
-TrainPosition(int anBoard[ 2 ][ 25 ], float arDesired[],
-	      float rAlpha, float rAnneal,
-	      const bgvariation bgv )
-{
-  float arInput[ NUM_INPUTS ], arOutput[ NUM_OUTPUTS ];
-
-  int pc = ClassifyPosition( anBoard, bgv );
-  
-  neuralnet* nn;
-  
-  switch( pc ) {
-  case CLASS_CONTACT:
-  {
-    nn = &nnContact;
-    CalculateContactInputs(anBoard, arInput);
-    break;
-  }
-  case CLASS_RACE:
-  {
-    nn = &nnRace;
-    CalculateRaceInputs(anBoard, arInput);
-    break;
-  }
-  case CLASS_CRASHED:
-    CalculateCrashedInputs(anBoard, arInput);
-    nn = &nnCrashed;
-    break;
-  default:
-    errno = EDOM;
-    return -1;
-  }
-
-  SanityCheck(anBoard, arDesired);
-
-  NeuralNetTrain( nn, arInput, arOutput, arDesired, rAlpha /
-		  pow( nn->nTrained / 1000.0 + 1.0, rAnneal ) );
-    
-  return 0;
 }
 
 /*
